xx-xx-xxxx Remon Sijrier <remon@vt.shuis.tudelft.nl>
	* Released 0.30.1
	
	* Fixed 2 possible crash bugs.
	* Added "merged waveform drawing for stereo tracks"
	* Snapping improved considerably!
	* Traverso build on Mac OS X now!

05-07-2006 Remon Sijrier <remon@vt.shuis.tudelft.nl>
	* Released 0.30.0
	
	* Added a "select project dir" in Project manager view.
	* Correctly set AudioClip track start/end frame at startup.
	* Fixed project render progress indication for long Songs (> 16 minutes)
	* Don't load/set a newly created Project, so the SongView of the current loaded
	  project will still be accessible!
	* Fixed issues with solo-stereo AudioClips in one Track. 
	* Make pan work for solo AudioClips as well.
	* Made fadeout adjustment follow the mouse which is more natural.
	* Added "Draw Rectified Wave" radiobutton in Settings View.
	* A number of crashing fixes.
	* Some more (important) stuff I don't remember ;-)


16-06-2006 Remon Sijrier <remon@vt.shuis.tudelft.nl>
	* Released 0.30.0-rc1
	
	* Fixed a memory corruption bug which caused the computer to halt when the Jack driver
	  was running on Project export.
	* Fixed bug where audioclip edges were set at the wrong position on AudioClip split.
	* Fixed AudioClip drag, sometimes the AudioClip got duplicated in one of the Tracks.
	* Fixed solo-mute bug, sometimes the AudioClip got silenced after Track solo-mute state change,
	  where it should not.
	* Correctly calculate the Song render start and end frame.
	* Added (de)normalization for AudioClips

23-05-2006 Remon Sijrier <remon@vt.shuis.tudelft.nl>
	* Released 0.29.0
	
	All changes below are from the fork until the release of 0.29.0
	
	* Fully seperated the GUI from the core code. Core code is a library, named libtraversocore
	* Ported to Qt4, no Qt3 Support is needed.
	* The application links statically to libtraversocore, and has all resource files compiled in,
		so no install is needed (makes testing builds much more comfortable)